--- a/wireframe.html
+++ b/wireframe.html
@@ -148,7 +148,7 @@
       <div id="u17" class="ax_default label">
         <div id="u17_div" class=""></div>
         <div id="u17_text" class="text ">
-          <p><span style="font-family:'PingFangTC-Regular', 'PingFang TC';">扣款週期規則：</span></p><p><span style="font-family:'ArialMT', 'Arial';">1. </span><span style="font-family:'PingFangTC-Regular', 'PingFang TC';">每月或每年固定日期扣款一次</span></p><p><span style="font-family:'PingFangTC-Regular', 'PingFang TC';">2. 扣款可指定次數或不限次數</span></p><p><span style="font-family:'PingFangTC-Regular', 'PingFang TC';"><br></span></p><p><span style="font-family:'PingFangTC-Regular', 'PingFang TC';color:#FF0000;">問題</span></p><p><span style="font-family:'PingFangTC-Regular', 'PingFang TC';color:#FF0000;">平台用戶可指定每月固定扣款排程嗎？例如指定統一 5號扣款</span></p><p><span style="font-family:'PingFangTC-Regular', 'PingFang TC';color:#FF0000;">或者只依據消費者刷卡日固定為排程日，例如消費者 3號刷卡，此後排程固定3號，遇到 29~31 則固定為 28刷卡</span></p>
+          <p><span style="font-family:'PingFangTC-Regular', 'PingFang TC';">扣款週期規則：</span></p><p><span style="font-family:'ArialMT', 'Arial';">1. </span><span style="font-family:'PingFangTC-Regular', 'PingFang TC';">每月或每年固定日期扣款一次</span></p><p><span style="font-family:'PingFangTC-Regular', 'PingFang TC';">2. 扣款可指定次數或不限次數</span></p>
         </div>
       </div>
 
