調整補充文案

--- a/wireframe.html
+++ b/wireframe.html
@@ -148,7 +148,7 @@
       <div id="u17" class="ax_default label">
         <div id="u17_div" class=""></div>
         <div id="u17_text" class="text ">
-          <p><span style="font-family:'PingFangTC-Regular', 'PingFang TC';">扣款週期規則：</span></p><p><span style="font-family:'ArialMT', 'Arial';">1. </span><span style="font-family:'PingFangTC-Regular', 'PingFang TC';">每月或每年固定日期扣款一次</span></p><p><span style="font-family:'PingFangTC-Regular', 'PingFang TC';">2. 扣款可指定次數或不限次數</span></p><p><span style="font-family:'PingFangTC-Regular', 'PingFang TC';"><br></span></p><p><span style="font-family:'PingFangTC-Regular', 'PingFang TC';color:#FF0000;">問題</span></p><p><span style="font-family:'PingFangTC-Regular', 'PingFang TC';color:#FF0000;">平台用戶可指定每月固定扣款排程嗎？例如指定統一 5號扣款</span></p><p><span style="font-family:'PingFangTC-Regular', 'PingFang TC';color:#FF0000;">或者只依據消費者刷卡日固定為排程日，例如消費者 3號刷卡，此後排程固定3號，遇到 29~31 則固定為 28刷卡</span></p>
+          <p><span style="font-family:'PingFangTC-Regular', 'PingFang TC';">扣款週期規則：</span></p><p><span style="font-family:'ArialMT', 'Arial';">1. </span><span style="font-family:'PingFangTC-Regular', 'PingFang TC';">每月或每年固定日期扣款一次</span></p><p><span style="font-family:'PingFangTC-Regular', 'PingFang TC';">2. 扣款可指定次數或不限次數</span></p>
         </div>
       </div>
 
@@ -761,7 +761,45 @@
       <div id="u96" class="ax_default label">
         <div id="u96_div" class=""></div>
         <div id="u96_text" class="text ">
-          <p><span>關於：https://medium.com/@soking</span></p>
+          <p><span>https://medium.com/@soking</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u97" class="ax_default label">
+        <div id="u97_div" class=""></div>
+        <div id="u97_text" class="text ">
+          <p><span>品牌網址</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Connector) -->
+      <div id="u98" class="ax_default connector">
+        <img id="u98_seg0" class="img " src="images/wireframe/u98_seg0.png" alt="u98_seg0"/>
+        <img id="u98_seg1" class="img " src="images/wireframe/u61_seg2.png" alt="u98_seg1"/>
+        <img id="u98_seg2" class="img " src="images/wireframe/u82_seg4.png" alt="u98_seg2"/>
+        <div id="u98_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u99" class="ax_default label">
+        <div id="u99_div" class=""></div>
+        <div id="u99_text" class="text ">
+          <p><span>品牌名稱</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Connector) -->
+      <div id="u100" class="ax_default connector">
+        <img id="u100_seg0" class="img " src="images/wireframe/u100_seg0.png" alt="u100_seg0"/>
+        <img id="u100_seg1" class="img " src="images/wireframe/u100_seg1.png" alt="u100_seg1"/>
+        <img id="u100_seg2" class="img " src="images/wireframe/u100_seg2.png" alt="u100_seg2"/>
+        <img id="u100_seg3" class="img " src="images/wireframe/u61_seg2.png" alt="u100_seg3"/>
+        <img id="u100_seg4" class="img " src="images/wireframe/u100_seg4.png" alt="u100_seg4"/>
+        <div id="u100_text" class="text " style="display:none; visibility: hidden">
+          <p></p>
         </div>
       </div>
     </div>
